deployment/k8s/system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: gravity.io
      http:
        paths:
          - path: /api/passport(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: passport-cluster-ip-srv
                port:
                  number: 3000
          - path: /api/archivist(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: archivist-cluster-ip-srv
                port:
                  number: 3000
          - path: /(|)(api/telegraph)
            pathType: Prefix
            backend:
              service:
                name: telegraph-cluster-ip-srv
                port:
                  number: 3000
          - path: /(|)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip-srv
                port:
                  number: 3000
